[package]
name = "solana-jsonrpc-client"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Lower-level API for interfacing with the Solana Protocol via JSON-RPC"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/solana-jsonrpc-client"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"
